# stickyexplorer

./: .gitignore  Cargo.toml  Dioxus.toml  ICED_HISTORY.md  ICED_NEXT.md  ICED_TODO.md  PROMPT.md  README.md  TODO.md  TODO_ICED.md  netlify.toml
assets/css/: button.css  components_navbar.css  components_search.css  main.css  page_detail.css  page_home.css
css/: README.md  footer.css  page_home.css
src/: lib.rs  main.rs
src/api/: client.rs  mod.rs  types.rs
src/components/: button_network.rs  hero.rs  search_bar.rs  ui.rs  widgets.rs
src/iced_components/: button.rs  card.rs  mod.rs  nav.rs  search_bar.rs
src/iced_pages/: account_page.rs  app.rs  block_page.rs  home_page.rs  iced_app.rs  mod.rs  tx_page.rs
src/icons/: lucide.rs  mod.rs
src/logic/: network.rs
src/pages/: fetch_transactions.rs  navbar.rs  page_account_detail.rs  page_block_detail.rs  page_blog.rs  page_home.rs  page_tx_detail.rs  route.rs
src/ui_utils/: extract_transfers.rs  fetch_transactions.rs  format.rs  mod.rs  network.rs  parse_action.rs  parse_transaction.rs  tx_cache.rs
src/utils/: extract_transfers.rs  fetch_transactions.rs  format.rs  highlight_json.rs  mod.rs  network.rs  parse_action.rs  parse_transaction.rs
src/utils_iced/: mod.rs  network.rs
src/utils_web/: fetch_transactions.rs  mod.rs  tx_cache.rs
