[package]
name = "stickyexplorer"
version = "0.1.0"
authors = ["Nathan Renfroe <thesunshiningmin@gmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# ===========================================
[dependencies]
dioxus = { version = "0.7", features = ["router"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
wasm-bindgen = "0.2.115"
wasm-bindgen-futures = "0.4.65"
web-sys = { version = "0.3.95", features = ["Crypto", "SubtleCrypto", "Window", "HtmlDocument", "HtmlElement", "Location", "Request", "RequestInit", "Response", "console", "Headers", "Storage", "StorageManager", "DomTokenList"] }
chrono = { version = "0.4", default-features = false, features = ["std", "now", "wasmbind"] }
gloo-timers = { version = "0.3", features = ["futures"] }
base64 = "0.22"
serde-wasm-bindgen = "0.6"
# ===========================================
[features]
default = ["web"]
web = ["dioxus/web", "reqwest/default-tls"]
desktop = ["dioxus/desktop", "reqwest/default-tls"]
mobile = ["dioxus/mobile", "reqwest/default-tls"]
# ===========================================
