[package]
name = "stickyexplorer"
version = "0.1.0"
authors = ["Nathan Renfroe <thesunshiningmin@gmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# ===========================================
[dependencies]
dioxus = { version = "0.7", features = ["router"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
wasm-bindgen = "0.2.115"
wasm-bindgen-futures = "0.4.65"
web-sys = { version = "0.3.95", features = ["Crypto", "SubtleCrypto", "Window", "HtmlDocument", "HtmlElement", "Location", "Request", "RequestInit", "Response", "console", "Headers", "Storage", "StorageManager", "DomTokenList"] }
chrono = { version = "0.4", default-features = false, features = ["std", "now", "wasmbind"] }
gloo-timers = { version = "0.3", features = ["futures"] }
base64 = "0.22"

# Iced desktop UI (non-wasm only)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iced = { version = "0.14.0", default-features = false, features = ["lazy", "tokio", "wgpu", "x11"] }
iced_widget = { version = "0.14.0" }
tokio = { version = "1", features = ["full"] }
url = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Stub deps for wasm32 — iced is desktop-only, but we need the crate to at least parse
# for cargo metadata / IDE indexing. Real compilation uses --features web only.

[[bin]]
name = "stickyexplorer_iced_main"
path = "src/bin/stickyexplorer_iced_main.rs"
required-features = ["iced_desktop"]
# Only built for iced_desktop (non-wasm) targets

# ===========================================
[features]
default = ["web"]
web = ["dioxus/web", "reqwest/default-tls", "logging"]
desktop = ["dioxus/desktop", "iced/wgpu", "reqwest/default-tls"]
iced_desktop = ["iced/wgpu", "iced/x11", "reqwest/default-tls"]
logging = []
mobile = ["dioxus/mobile", "reqwest/default-tls"]
# ===========================================
